# ai-crypto-hedge-fund

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: btc_ccxt.csv  portfolio_prices.csv  top100_prices.csv
notebooks/: hedge_fund.ipynb
src/: agents.py  backtest.py  data_loader.py  features.py  metrics.py  models.py  portfolio.py  rebalance.py  scaling.py  validation.py
