[project]
name = "ai-crypto-hedge-fund"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "arch>=7.2.0",
    "ccxt>=4.5.59",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pyportfolioopt>=1.6.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "ta-lib>=0.6.8",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
